[project]
name = "data-engineering-upskill"
version = "0.1.0"
description = "Data Software Engineer (Upskilling position for Python Developers)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]
